# machine_learning

./: README.md
ml_models/: .gitignore  README.md  pyproject.toml
ml_models/ml_models/: __init__.py
ml_models/ml_models/base_model/: base_model.py
ml_models/ml_models/linear_regression/: __init__.py  linear_regression.py
ml_models/ml_models/utility/: __init__.py  min_max_scaler.py  standard_scaler.py
ml_models/tests/: test_linear_regression.py
